--- a/stock.html
+++ b/stock.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="color: #555555">
 <head>
     <meta charset="UTF-8">
     <title>Stock</title>
@@ -7,8 +7,9 @@
 
 </head>
 <body style="    background-image: url('./image/fond_boulangerie.png');
-"><div class="dropdown">
-    <button onclick="myFunction()" class="dropbtn">Menu</button>
+">
+<div class="dropdown" style="float: left; position: absolute">
+    <button onclick="myFunction()" class="dropbtn" style="color:#555555;background-color: orange; padding:0.5em 1em 0.5em 1em; font-size: 2em; border-radius: 1em">MENU</button>
     <div id="myDropdown" class="dropdown-content">
         <a href="./index.html">Menu principal</a>
         <a href="./caisse.html">Caisse</a>
