ajouter json et l'utiliser
filereader, JSON.parse, localstorage.set

--- a/stock.html
+++ b/stock.html
@@ -15,6 +15,7 @@
         <a href="./caisse.html">Caisse</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
         <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
+        <a href="recuperer_compte.html" id="seco" >Se connecter</a>
     </div>
 </div>
 <script>/* When the user clicks on the button,
