recuperer son compte

--- a/caisse.html
+++ b/caisse.html
@@ -16,6 +16,7 @@
         <a href="./stock.html">Stock</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
         <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
+        <a href="recuperer_compte.html" id="seco" >Se connecter</a>
     </div>
 </div>
 <script>
