--- a/recuperer_compte.html
+++ b/recuperer_compte.html
@@ -26,6 +26,8 @@
         localStorage.setItem('niveau', newArr.niveau)
         localStorage.setItem('tentative', newArr.tentative)
         localStorage.setItem('bonne_reponse', newArr.bonne_reponse)
+        location = "debut_jeu.html"
+
 
     }
 
