possibilité de supprimer sa partie
on demande au joueur s'il veut la télécharger

--- a/caisse.html
+++ b/caisse.html
@@ -15,8 +15,8 @@
         <a href="./index.html">Menu principal</a>
         <a href="./stock.html">Stock</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
-        <a href="recuperer_compte.html" id="seco" >Se connecter</a>
+        <a href="supprimer_joueur.html" id="supprimer_joueur">Supprimer ma partie</a>
+        <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
     </div>
 </div>
 <script>
