--- a/recuperer_compte.html
+++ b/recuperer_compte.html
@@ -1,5 +1,5 @@
-<input type="file">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<body style="background-image: url('./image/fond_boulangerie.png')">
+<input type="file" style="font-size: 3em; background-color: orangered; color: #555555; padding: 2em; display: block; margin: auto; margin-top: 15%">
 
 <script>
     const input = document.querySelector('input[type="file')
@@ -33,3 +33,4 @@
 
 
 </script>
+</body>
