--- a/stock.html
+++ b/stock.html
@@ -14,8 +14,8 @@
         <a href="./index.html">Menu principal</a>
         <a href="./caisse.html">Caisse</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="#" id="supprimer_joueur">Supprimer ma partie</a>
-        <a href="recuperer_compte.html" id="seco" >Se connecter</a>
+        <a href="supprimer_joueur.html" id="supprimer_joueur">Supprimer ma partie</a>
+        <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
     </div>
 </div>
 <script>/* When the user clicks on the button,
