--- a/creerPartie.html
+++ b/creerPartie.html
@@ -18,7 +18,7 @@
     }
 </style>
 <body>
-<form action="debut_jeu.html">
+<form action="controleur_nom.html">
     <legend style="display: block; margin : auto;margin-top:1em;margin-bottom:0.5em;text-align: center; font-size: 5em; font-weight: 1000; text-shadow: -1px -1px white, 1px 1px #333;  color: orangered ">
         Quel est ton prénom?
     </legend>
