ajout croix de multiplication ×

--- a/caisse.html
+++ b/caisse.html
@@ -97,11 +97,11 @@ window.onclick = function(event) {
 
                             if (i == 0) {
                                 message_client = "Bonjour, j'aimerais<br /> " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
-                                message_calcul = recur_produit + " x " + prix_produit;
+                                message_calcul = recur_produit + " × " + prix_produit;
                                 resultat_calcul = recur_produit * prix_produit;
                             } else {
                                 message_client += ", <br />" + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
-                                message_calcul += "<br /> + <br />" + recur_produit + " x " + prix_produit;
+                                message_calcul += "<br /> + <br />" + recur_produit + " × " + prix_produit;
                                 resultat_calcul += recur_produit * prix_produit;
                             }
                             console.log(message_client);
@@ -140,11 +140,11 @@ window.onclick = function(event) {
 
                             if (i == 0) {
                                 message_client = "Bonjour, j'aimerais<br /> " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
-                                message_calcul = recur_produit + " x " + prix_produit;
+                                message_calcul = recur_produit + " × " + prix_produit;
                                 resultat_calcul = recur_produit * prix_produit;
                             } else {
                                 message_client += ", <br />" + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
-                                message_calcul += "<br /> + <br />" + recur_produit + " x " + prix_produit;
+                                message_calcul += "<br /> + <br />" + recur_produit + " × " + prix_produit;
                                 resultat_calcul += recur_produit * prix_produit;
                             }
                             console.log(message_client);
@@ -199,11 +199,11 @@ window.onclick = function(event) {
 
                             if (i == 0) {
                                 message_client = "Bonjour, j'aimerais<br /> " + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
-                                message_calcul = recur_produit + " x " + prix_produit;
+                                message_calcul = recur_produit + " × " + prix_produit;
                                 resultat_calcul = recur_produit * prix_produit;
                             } else {
                                 message_client += ", <br />" + recur_produit + " " + nom_produit + " (" + prix_produit + "€)";
-                                message_calcul += "<br /> + <br />" + recur_produit + " x " + prix_produit;
+                                message_calcul += "<br /> + <br />" + recur_produit + " × " + prix_produit;
                                 resultat_calcul += recur_produit * prix_produit;
                             }
                             console.log(message_client);
