--- a/stock.html
+++ b/stock.html
@@ -14,7 +14,7 @@
         <a href="./index.html">Menu principal</a>
         <a href="./caisse.html">Caisse</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
-        <a href="supprimer_joueur.html" id="supprimer_joueur">Supprimer ma partie</a>
+        <a href="supprimer_joueur.html">Supprimer ma partie</a>
         <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
     </div>
 </div>
@@ -172,6 +172,48 @@ for (i=0; i<=13; i++){
         document.getElementById(i).title = nom;
     }
 }
+
+</script>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script>
+    //téléchargement du fichir json avec les informations du joueur
+    //https://ourcodeworld.com/articles/read/189/how-to-create-a-file-and-generate-a-download-with-javascript-in-the-browser-without-a-server
+    function download(filename, text) {
+        var element = document.createElement('a');
+        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
+        element.setAttribute('download', filename);
+
+        element.style.display = 'none';
+        document.body.appendChild(element);
+
+        element.click();
+        document.body.removeChild(element);
+    }
+    // Start file download.
+    document.getElementById("dwn-btn").addEventListener("click", function(){
+        // Generate download of config_joueur.json file with some content
+        var text = '{\n' +
+            '  "prenom": "' + localStorage.getItem("prenom") +'",\n' +
+            '  "niveau": "' + localStorage.getItem("niveau") +'",\n' +
+            '  "tentative": "' + localStorage.getItem("tentative") +'",\n' +
+            '  "bonne_reponse": "' + localStorage.getItem("bonne_reponse") +'"\n' +
+            '}';
+        var filename = "config_joueur.json";
+
+        download(filename, text);
+    }, false);
+
+
+
+    document.getElementById("aide").addEventListener("click", function(){
+        let clic_aide = document.getElementById("calcul");
+        if(getComputedStyle(clic_aide).display != "none"){
+            clic_aide.style.display = "none";
+        } else {
+            clic_aide.style.display = "block";
+            cliquer_pour_etre_aide = true;
+        }}, false);
 
 </script>
 </html>
