--- a/caisse.html
+++ b/caisse.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image: url('image/piece.jpg'); background-size: cover">
+<html lang="en" style="background-image: url('image/fondfinal.png'); background-size: cover">
 <head>
     <title>My Bakey _ caisse</title>
     <meta charset="utf-8">
@@ -61,8 +61,8 @@ window.onclick = function(event) {
 <input type="image"  style="width: 10em" id="nb_tentatives">
 </div>
 <div style="position: absolute;bottom: 0px; right: 0px; display: inline-block; text-align: center">
-    <span id="pieces"></span>
-    <input type="image" src="image/sous.jpg" style="width: 10em">
+    <span id="pieces" style="font-size: 2em"></span>
+    <input type="image" src="image/sous.png" style="width: 10em; ">
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
