liste_biens achetés en magasin + fenetre qui apparaît pour demander si acheter

--- a/creerPartie.html
+++ b/creerPartie.html
@@ -50,6 +50,8 @@
             localStorage.setItem(key_bonne_reponse, val_bonne_reponse);
             localStorage.setItem(key_tentative, val_tentative);
             localStorage.setItem(key_piece, val_piece);
+            localStorage.setItem("liste_biens", []);
+
             location.reload();
         }
 
