--- a/demandeEnregistrement.html
+++ b/demandeEnregistrement.html
@@ -52,7 +52,7 @@ Ton ancienne partie va être supprimé. <br>
 
     document.getElementById("non").addEventListener("click", function(){
         localStorage.clear();
-        location = "recuperer_compte.html";
+        location = "creerPartie.html";
     }, false);
 
     document.getElementById("oui").addEventListener("click", function(){
@@ -67,7 +67,7 @@ Ton ancienne partie va être supprimé. <br>
 
         download(filename, text);
 
-        location = "recuperer_compte.html";
+        location = "creerPartie.html";
 
     }, false);
 
