--- a/magasin.html
+++ b/magasin.html
@@ -8,29 +8,100 @@
 <body style="text-align: center;">
 <table style="background-color: red; text-align: center; font-size: 2em; display: inline-block;">
     <tr>
-        <td><input type="image" src="image/magasin/1.png" style="width: 10em" id="etoile" value="5" onclick="quest('etoile')"><br>5 pièces</td>
-        <td><input type="image" src="image/magasin/2.png" style="width: 10em" id="fleur" value="5" onclick="quest('fleur')"><br>5 pièces</td>
+        <td><input type="image" src="image/magasin/1.png" style="width: 10em" alt="etoile" id="etoile" value="5" onclick="quest('etoile')"><br>5 pièces</td>
+        <td><input type="image" src="image/magasin/2.png" style="width: 10em" alt="fleur" id="fleur" value="5" onclick="quest('fleur')"><br>5 pièces</td>
     </tr>
     <tr>
-        <td><input type="image" src="image/magasin/3.png" style="width: 10em " id="cercle" value="10" onclick="quest('cercle')"><br>10 pièces</td>
-        <td><input type="image" src="image/magasin/4.png" style="width: 10em" id="mandala" value="10" onclick="quest('mandala')"><br>10 pièces</td>
+        <td><input type="image" src="image/magasin/3.png" style="width: 10em " alt="cercle" id="cercle" value="10" onclick="quest('cercle')"><br>10 pièces</td>
+        <td><input type="image" src="image/magasin/4.png" style="width: 10em" alt="mandala" id="mandala" value="10" onclick="quest('mandala')"><br>10 pièces</td>
     </tr>
     <tr>
-        <td><input type="image" src="image/magasin/5.png" style="width: 10em"id="rosace" value="15" onclick="quest('rosace')"><br>15 pièces</td>
-        <td><input type="image" src="image/magasin/6.png" style="width: 10em" id="spirale" value="15" onclick="quest('spirale')"><br>15 pièces</td>
+        <td><input type="image" src="image/magasin/5.png" style="width: 10em" alt="rosace" id="rosace" value="15" onclick="quest('rosace')"><br>15 pièces</td>
+        <td><input type="image" src="image/magasin/6.png" style="width: 10em" alt="spirale" id="spirale" value="15" onclick="quest('spirale')"><br>15 pièces</td>
     </tr>
 </table>
 </body>
 <script>
+    //quand on clique sur l'image
     function quest(id){
+        //on vérifie s'il y a déjà des produits d'achetés
+        if (localStorage.getItem("liste_biens").length == 0){
+            liste = []
+        }
+        else {
+            //si il y a déjà des produits achetés, on les récupère dans la liste "liste"
+            liste = JSON.parse(localStorage['liste_biens'])
+        }
+
+        //on récupère l'élément avec l'id entré en paramètre dans quest()
         input_tag = document.getElementById(id);
-        nom = input_tag.id
-        console.log(nom+ " " + input_tag.value)
-        localStorage.setItem("achat", nom )
-        WindowObjectReference = window.open("demande_paiement.html",
-            "NomDeFenetreDescriptif",
-            "width=420,height=230,resizable,scrollbars=yes,status=1");
+        //on récupère son nom
+        nom = input_tag.alt
+
+        //si le produit sélectionné est déjà dans la liste des produits achetés rien ne se passe
+        if (liste.includes(nom)){}
+        //si le produit sélectionné est déjà dans la liste des produits achetés on demande au joueur s'il veut acheter le nouveau produit
+        else {
+
+            //on vérifie que le joueur ai assez de pièce
+            console.log(input_tag.value)
+            console.log(localStorage.getItem("piece"))
+
+            if (localStorage.getItem("piece") > input_tag.value) {
+                console.log(nom + " " + input_tag.value)
+                localStorage.setItem("achat", nom)
+                //une fenêtre s'ouvre
+                var pageFille = window.open("demande_paiement.html",
+                    "NomDeFenetreDescriptif",
+                    "width=420,height=230,resizable,scrollbars=yes,status=1");
+                //Recharge la page parente à la fermeture de la page fille
+                pageFille.onunload = function () {
+                    if (pageFille.fermeture) {
+                        //Rechargement
+                        location.reload();
+                    }
+                }
+            }
+        else {
+            alert("Tu n'as pas assez de pièce pour acheter ceci")
+            }
+        }
     }
+
+
+    var elmts = document.getElementsByTagName("input");
+    console.log(elmts)
+    console.log(elmts.length)
+    var liste;
+    if (localStorage.getItem("liste_biens").length == 0){
+        liste = []
+    }
+    else {
+        liste = JSON.parse(localStorage['liste_biens'])
+    }
+
+    //produits pas achetés = gris, quand on passe souris dessus : colorés
+    for (i=0; i<elmts.length; i++) {
+        var elmt = elmts[i].alt
+            if (liste.includes(elmt)){
+                console.log(elmt+" : deja acheté")
+            }
+            else {
+                console.log(elmt+" : a acheter!");
+                elmts[i].style.filter = "grayscale(100%)";
+                elmts[i].style.webkitFilter = "grayscale(100%)";
+                elmts[i].addEventListener("mouseover", function( event ) {
+                    // on cible la cible de mouseleave
+                    this.style.filter = "grayscale(0%)";
+                    this.style.webkitFilter = "grayscale(0%)";
+                });
+                elmts[i].addEventListener("mouseout", function( event ) {
+                    // on cible la cible de mouseleave
+                    this.style.filter = "grayscale(100%)";
+                    this.style.webkitFilter = "grayscale(100%)";
+                });
+            }
+  }
 </script>
 
 
