ajout lien vers magasin + menu dans magasin.html

--- a/caisse.html
+++ b/caisse.html
@@ -14,6 +14,7 @@
     <div id="myDropdown" class="dropdown-content">
         <a href="./index.html">Menu principal</a>
         <a href="./stock.html">Stock</a>
+        <a href="./magasin.html">Magasin</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
         <a href="supprimer_joueur.html">Supprimer ma partie</a>
         <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
