--- a/stock.html
+++ b/stock.html
@@ -13,6 +13,7 @@
     <div id="myDropdown" class="dropdown-content">
         <a href="./index.html">Menu principal</a>
         <a href="./caisse.html">Caisse</a>
+        <a href="./magasin.html">Magasin</a>
         <a href="#" id="dwn-btn">Sauvegarder ma partie</a>
         <a href="supprimer_joueur.html">Supprimer ma partie</a>
         <a href="demandeEnregistrement.html" id="seco" >Importer une partie</a>
